# GstCamera

./: CMakeLists.txt  README.md
include/: http_stream.h  loopqueue.hpp
src/: http_stream.cpp  main.cpp
